--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <header id="anasayfa" class="hero">
         <div class="hero-content" data-aos="fade-up">
-            <h1>Geleceğin Teknolojisini Öğreninaaaaaa</h1>
+            <h1>Geleceğin Teknolojisini Öğrenin</h1>
             <p>Bilgisayar Mühendisliği alanında kapsamlı eğitimlerle kariyerinizi şekillendirin</p>
-            <a href="#courses" class="btn btn-primary btn-lg cta-button">
+            <a href="pages/courses/course-template.html" class="btn btn-primary btn-lg cta-button">
                 Kurslara Göz At
                 <i class="fas fa-arrow-right"></i>
             </a>
@@ -41,6 +41,116 @@
             <p class="section-description">En çok tercih edilen ücretsiz eğitimlerimizden bazıları</p>
             <div class="course-grid" id="featured-courses">
                 <!-- Kurslar JavaScript ile doldurulacak -->
+                <div class="course-card">
+                    <img src="assets/images/courses/algoritma.jpg" alt="Algoritma ve Veri Yapıları" class="course-image">
+                    <div class="course-content">
+                        <h3 class="course-title">Algoritma ve Veri Yapıları</h3>
+                        <div class="course-meta">
+                            <span><i class="fas fa-clock"></i> 40 saat</span>
+                            <span><i class="fas fa-user-graduate"></i> 250+ öğrenci</span>
+                        </div>
+                        <ul class="featured-topics">
+                            <li>Temel Algoritmalar</li>
+                            <li>Veri Yapıları</li>
+                            <li>Problem Çözme</li>
+                        </ul>
+                        <a href="pages/courses/algoritma/index.html" class="course-button">
+                            Kursa Git <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Python kursu için -->
+                <div class="course-card">
+                    <img src="assets/images/courses/python.jpg" alt="Python Programlama" class="course-image">
+                    <div class="course-content">
+                        <h3 class="course-title">Python Programlama</h3>
+                        <div class="course-meta">
+                            <span><i class="fas fa-clock"></i> 50 saat</span>
+                            <span><i class="fas fa-user-graduate"></i> 500+ öğrenci</span>
+                        </div>
+                        <ul class="featured-topics">
+                            <li>Python'a Giriş</li>
+                            <li>Veri Tipleri ve Değişkenler</li>
+                            <li>Kontrol Yapıları</li>
+                            <li>Fonksiyonlar</li>
+                            <li>Nesne Tabanlı Programlama</li>
+                            <li>Modüller ve Paketler</li>
+                        </ul>
+                        <a href="pages/courses/python/index.html" class="course-button">
+                            Kursa Git <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Web Geliştirme kursu için -->
+                <div class="course-card">
+                    <img src="assets/images/courses/webdev.jpg" alt="Web Geliştirme" class="course-image">
+                    <div class="course-content">
+                        <h3 class="course-title">Web Geliştirme</h3>
+                        <div class="course-meta">
+                            <span><i class="fas fa-clock"></i> 60 saat</span>
+                            <span><i class="fas fa-user-graduate"></i> 300+ öğrenci</span>
+                        </div>
+                        <ul class="featured-topics">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Bootstrap</li>
+                            <li>React</li>
+                            <li>Node.js</li>
+                        </ul>
+                        <a href="pages/courses/web/index.html" class="course-button">
+                            Kursa Git <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- JavaScript kursu için -->
+                <div class="course-card">
+                    <img src="assets/images/courses/javascript.jpg" alt="JavaScript" class="course-image">
+                    <div class="course-content">
+                        <h3 class="course-title">JavaScript</h3>
+                        <div class="course-meta">
+                            <span><i class="fas fa-clock"></i> 40 saat</span>
+                            <span><i class="fas fa-user-graduate"></i> 200+ öğrenci</span>
+                        </div>
+                        <ul class="featured-topics">
+                            <li>Temel JavaScript</li>
+                            <li>ES6</li>
+                            <li>DOM Manipülasyonu</li>
+                            <li>Event Handling</li>
+                            <li>Asenkron Programlama</li>
+                            <li>Node.js</li>
+                        </ul>
+                        <a href="pages/courses/javascript/index.html" class="course-button">
+                            Kursa Git <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- React kursu için -->
+                <div class="course-card">
+                    <img src="assets/images/courses/react.jpg" alt="React" class="course-image">
+                    <div class="course-content">
+                        <h3 class="course-title">React</h3>
+                        <div class="course-meta">
+                            <span><i class="fas fa-clock"></i> 50 saat</span>
+                            <span><i class="fas fa-user-graduate"></i> 300+ öğrenci</span>
+                        </div>
+                        <ul class="featured-topics">
+                            <li>React'e Giriş</li>
+                            <li>JSX</li>
+                            <li>Componentler</li>
+                            <li>State Management</li>
+                            <li>React Router</li>
+                            <li>Redux</li>
+                        </ul>
+                        <a href="pages/courses/react/index.html" class="course-button">
+                            Kursa Git <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="center-button">
                 <a href="pages/courses/course-template.html" class="btn btn-primary">
@@ -53,21 +163,21 @@
             <div class="about-content" data-aos="fade-up">
                 <h2>Hakkımızda</h2>
                 <div class="about-grid">
-                    <div class="about-card">
+                    <a href="pages/about/mission.html" class="about-card">
                         <i class="fas fa-graduation-cap"></i>
                         <h3>Misyonumuz</h3>
                         <p>Kaliteli ve ücretsiz teknoloji eğitimini herkese ulaştırmak, geleceğin teknoloji liderlerini yetiştirmek.</p>
-                    </div>
-                    <div class="about-card">
+                    </a>
+                    <a href="pages/about/instructors.html" class="about-card">
                         <i class="fas fa-users"></i>
                         <h3>Eğitmenlerimiz</h3>
                         <p>Alanında uzman, deneyimli eğitmenlerimizle güncel ve kaliteli eğitim içeriği.</p>
-                    </div>
-                    <div class="about-card">
+                    </a>
+                    <a href="pages/about/methodology.html" class="about-card">
                         <i class="fas fa-code"></i>
                         <h3>Metodolojimiz</h3>
                         <p>Uygulamalı eğitim, gerçek projeler ve interaktif öğrenme deneyimi.</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -97,6 +207,7 @@
                     </div>
                 </div>
                 <form class="contact-form" data-aos="fade-left">
+                    <input type="hidden" name="_to" value="erayasar111@gmail.com">
                     <div class="form-group">
                         <input type="text" placeholder="Adınız" required>
                         <input type="email" placeholder="E-posta" required>
