--- a/pages/courses/course-template.html
+++ b/pages/courses/course-template.html
@@ -36,11 +36,9 @@
             </div>
         </section>
 
-        <section class="courses-grid">
-            <div class="course-grid" id="courses-container">
-                <!-- Kurslar JavaScript ile doldurulacak -->
-            </div>
-        </section>
+        <div class="courses-grid" id="all-courses">
+            <!-- Kurslar JavaScript ile buraya yüklenecek -->
+        </div>
     </main>
 
     <footer>
