--- a/pages/courses/javascript/index.html
+++ b/pages/courses/javascript/index.html
@@ -3,59 +3,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern JavaScript - TechEdu</title>
-    <!-- Google Fonts -->
+    <title>JavaScript - TechEdu</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Prism.js -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
-    <!-- Ana CSS -->
     <link rel="stylesheet" href="../../../css/style.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">TechEdu</div>
         <ul class="nav-links">
-            <li><a href="/index.html">Ana Sayfa</a></li>
-            <li><a href="/kurslar.html">Kurslar</a></li>
-            <li><a href="/index.html#hakkimizda">Hakkımızda</a></li>
-            <li><a href="/index.html#iletisim">İletişim</a></li>
+            <li><a href="../../../index.html">Ana Sayfa</a></li>
+            <li><a href="../course-template.html">Kurslar</a></li>
+            <li><a href="../../../index.html#hakkimizda">Hakkımızda</a></li>
+            <li><a href="../../../index.html#iletisim">İletişim</a></li>
         </ul>
     </nav>
 
-    <div class="course-content-wrapper">
-        <div class="course-sidebar">
-            <div class="course-progress">
-                <div class="progress-bar">
-                    <div class="progress" style="width: 0%"></div>
-                </div>
-                <span class="progress-text">0% Tamamlandı</span>
+    <main class="course-page">
+        <section class="course-hero">
+            <div class="course-header">
+                <h1>JavaScript</h1>
+                <p>Modern web uygulamaları geliştirmek için JavaScript'i derinlemesine öğrenin</p>
             </div>
-            <div class="course-modules">
-                <!-- Modüller JavaScript ile doldurulacak -->
-            </div>
-        </div>
+        </section>
 
-        <div class="course-main-content">
-            <div class="content-header">
-                <h1 id="course-title"></h1>
-                <div class="course-meta">
-                    <span class="duration"><i class="far fa-clock"></i> <span id="course-duration"></span></span>
-                    <span class="level"><i class="fas fa-layer-group"></i> <span id="course-level"></span></span>
+        <section class="course-content">
+            <div class="course-sidebar">
+                <div class="course-info">
+                    <div class="info-item">
+                        <i class="fas fa-clock"></i>
+                        <span>40 saat</span>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>200+ öğrenci</span>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-signal"></i>
+                        <span>Orta Seviye</span>
+                    </div>
+                </div>
+                <div class="course-topics">
+                    <h3>Konu Başlıkları</h3>
+                    <ul>
+                        <li>
+                            <a href="#" class="active">
+                                <i class="fas fa-play-circle"></i>
+                                JavaScript Temelleri
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                ES6+ Özellikleri
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                DOM Manipülasyonu
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Asenkron JavaScript
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                API Kullanımı
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Modern JS Araçları
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="content-body" id="course-content">
-                <!-- İçerik JavaScript ile doldurulacak -->
+
+            <div class="lesson-content">
+                <div class="lesson-section">
+                    <h2>JavaScript Temelleri</h2>
+                    <p>Bu bölümde JavaScript'in temel kavramlarını ve modern özellikleri öğreneceksiniz.</p>
+                    
+                    <div class="content-block">
+                        <h3>JavaScript'te Değişkenler ve Veri Tipleri</h3>
+                        <p>Modern JavaScript'te değişken tanımlama ve temel veri tipleri:</p>
+                        <ul>
+                            <li>let ve const ile değişken tanımlama</li>
+                            <li>String, Number, Boolean</li>
+                            <li>Array ve Object yapıları</li>
+                            <li>Template literals</li>
+                        </ul>
+                    </div>
+
+                    <div class="code-example">
+                        <h3>Modern JavaScript Örneği</h3>
+                        <pre><code class="language-javascript">
+// Modern JavaScript özellikleri
+const user = {
+    name: 'Ahmet',
+    age: 25,
+    skills: ['JavaScript', 'React', 'Node.js']
+};
+
+// Destructuring
+const { name, age } = user;
+
+// Template literals
+const greeting = `Merhaba, ben ${name}! 
+${age} yaşındayım ve aşağıdaki teknolojilerle çalışıyorum:`;
+
+// Array methods
+const skillsList = user.skills
+    .map(skill => `- ${skill}`)
+    .join('\n');
+
+// Modern fonksiyon
+const displayProfile = () => {
+    console.log(greeting);
+    console.log(skillsList);
+};
+
+// Promise örneği
+const fetchUserData = () => {
+    return new Promise((resolve, reject) => {
+        setTimeout(() => {
+            resolve(user);
+        }, 1000);
+    });
+};
+
+// Async/await kullanımı
+async function init() {
+    try {
+        const userData = await fetchUserData();
+        displayProfile();
+    } catch (error) {
+        console.error('Hata:', error);
+    }
+}
+
+init();
+                        </code></pre>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TechEdu. Tüm hakları saklıdır.</p>
+    </footer>
 
     <button class="theme-toggle">
         <i class="fas fa-moon"></i>
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-    <script type="module" src="/js/course-content.js"></script>
+    <script type="module" src="../../../js/main.js"></script>
 </body>
 </html> 
