--- a/pages/courses/python/index.html
+++ b/pages/courses/python/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Programlama - TechEdu</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Ana CSS -->
-    <link rel="stylesheet" href="../../../css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
+    <link rel="stylesheet" href="../../../css/style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -22,41 +20,122 @@
         </ul>
     </nav>
 
-    <div class="course-content-wrapper">
-        <div class="course-sidebar">
-            <div class="course-modules">
-                <div class="module">
-                    <div class="module-title">
-                        Python'a Giriş
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                    <div class="module-lessons">
-                        <a href="#" class="lesson-link">Python Nedir ve Neden Öğrenmeliyiz?</a>
-                        <a href="#" class="lesson-link">Kurulum ve Geliştirme Ortamı</a>
-                        <a href="#" class="lesson-link">İlk Python Programı</a>
-                    </div>
-                </div>
+    <main class="course-page">
+        <section class="course-hero">
+            <div class="course-header">
+                <h1>Python Programlama</h1>
+                <p>Sıfırdan ileri seviyeye Python programlama dilini öğrenin</p>
             </div>
-        </div>
+        </section>
 
-        <div class="course-main-content">
-            <div class="content-header">
-                <h1 id="course-title"></h1>
-                <div class="course-meta">
-                    <span class="duration"><i class="far fa-clock"></i> <span id="course-duration"></span></span>
-                    <span class="level"><i class="fas fa-layer-group"></i> <span id="course-level"></span></span>
+        <section class="course-content">
+            <div class="course-sidebar">
+                <div class="course-info">
+                    <div class="info-item">
+                        <i class="fas fa-clock"></i>
+                        <span>50 saat</span>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>500+ öğrenci</span>
+                    </div>
+                    <div class="info-item">
+                        <i class="fas fa-signal"></i>
+                        <span>Başlangıç Seviye</span>
+                    </div>
+                </div>
+                <div class="course-topics">
+                    <h3>Konu Başlıkları</h3>
+                    <ul>
+                        <li>
+                            <a href="#" class="active">
+                                <i class="fas fa-play-circle"></i>
+                                Python'a Giriş
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Veri Tipleri ve Değişkenler
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Kontrol Yapıları
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Fonksiyonlar
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Nesne Tabanlı Programlama
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fas fa-play-circle"></i>
+                                Modüller ve Paketler
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="content-body" id="course-content">
-                <!-- İçerik JavaScript ile doldurulacak -->
+
+            <div class="lesson-content">
+                <div class="lesson-section">
+                    <h2>Python'a Giriş</h2>
+                    <p>Bu bölümde Python programlama dilinin temellerini öğreneceksiniz.</p>
+                    
+                    <div class="content-block">
+                        <h3>Python Nedir?</h3>
+                        <p>Python, okunabilir ve anlaşılır syntax'ı ile öne çıkan, çok amaçlı bir programlama dilidir. Başlıca özellikleri:</p>
+                        <ul>
+                            <li>Kolay öğrenilebilir syntax</li>
+                            <li>Geniş kütüphane desteği</li>
+                            <li>Platform bağımsız çalışma</li>
+                            <li>Büyük topluluk desteği</li>
+                        </ul>
+                    </div>
+
+                    <div class="code-example">
+                        <h3>İlk Python Programı</h3>
+                        <pre><code class="language-python">
+# Merhaba Dünya programı
+def main():
+    """
+    Basit bir merhaba dünya örneği
+    """
+    message = "Merhaba, Python!"
+    print(message)
+    
+    # Kullanıcıdan girdi alma
+    name = input("Adınız nedir? ")
+    print(f"Merhaba, {name}!")
+
+if __name__ == "__main__":
+    main()
+                        </code></pre>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TechEdu. Tüm hakları saklıdır.</p>
+    </footer>
 
     <button class="theme-toggle">
         <i class="fas fa-moon"></i>
     </button>
 
-    <script type="module" src="../../../js/course-content.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
+    <script type="module" src="../../../js/main.js"></script>
 </body>
 </html> 
