adding courses informations

--- a/pages/courses/python/index.html
+++ b/pages/courses/python/index.html
@@ -136,6 +136,5 @@ if __name__ == "__main__":
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-    <script type="module" src="../../../js/main.js"></script>
-</body>
+    <script type="module" src="../../../js/course-content.js"></script></body>
 </html> 
