--- a/pages/courses/react/index.html
+++ b/pages/courses/react/index.html
@@ -170,6 +170,6 @@ export default App;
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-    <script type="module" src="../../../js/main.js"></script>
+    <script type="module" src="../../../js/course-content.js"></script>
 </body>
 </html> 
