--- a/pages/courses/algoritma/index.html
+++ b/pages/courses/algoritma/index.html
@@ -148,6 +148,6 @@ def binary_search(arr: list, target: int) -> int:
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-    <script type="module" src="../../../js/main.js"></script>
+    <script type="module" src="../../../js/course-content.js"></script>
 </body>
 </html> 
