--- a/pages/courses/web/index.html
+++ b/pages/courses/web/index.html
@@ -151,6 +151,6 @@
     </button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
-    <script type="module" src="../../../js/main.js"></script>
+    <script type="module" src="../../../js/course-content.js"></script>
 </body>
 </html> 
